--- a/ProyectoFinal/views/cart.handlebars
+++ b/ProyectoFinal/views/cart.handlebars
@@ -33,7 +33,44 @@
       </tbody>
     </table>
   </div>
-  <button class="btn btn-success" onclick="">Purchase</button>
+  <!-- Button trigger modal -->
+  <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    Finalizar Compra
+  </button>
+
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Finaliza el pago</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form class="form" role="form" autocomplete="off" id="formPurchase">
+            <div>
+              <label for="card-element">
+                Ingresa los datos de tu tarjeta
+              </label>
+              <div id="card-element">
+                <!-- Elemento de tarjeta de Stripe -->
+                <input id="card-holder-name" type="text" placeholder="Nombre en la tarjeta">
+                <div id="card-element">
+                  <!-- Aquí se insertará el elemento de tarjeta de Stripe -->
+                </div>
+              </div>
+              <div id="card-errors" role="alert"></div>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button id="pay-button" type="button" class="btn btn-primary" onclick="handlePayment('{{user.cartId}}')">Pay</button>
+        </div>
+      </div>
+    </div>
+  </div>
   {{/if}}
 </div>
+<script src="https://js.stripe.com/v3/"></script>
 <script src="/js/cart.js"></script>
